sistema de cadastro e busca por contas finalizado

--- a/Telas/tela_cadastro.ui
+++ b/Telas/tela_cadastro.ui
@@ -93,7 +93,7 @@
           <string notr="true">background-color: transparent; color: #333333;font-size: 12px; font-weight: bold; text-align: left;</string>
          </property>
          <property name="text">
-          <string>   Nome Completo</string>
+          <string>   Nome</string>
          </property>
          <property name="icon">
           <iconset>
@@ -111,7 +111,7 @@
         </widget>
        </item>
        <item>
-        <widget class="QLineEdit" name="le_cad_nome_completo_2">
+        <widget class="QLineEdit" name="le_cad_nome">
          <property name="minimumSize">
           <size>
            <width>380</width>
@@ -128,6 +128,49 @@
        </item>
        <item>
         <spacer name="verticalSpacer_8">
+         <property name="orientation">
+          <enum>Qt::Vertical</enum>
+         </property>
+         <property name="sizeType">
+          <enum>QSizePolicy::Maximum</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>20</width>
+           <height>25</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+       <item>
+        <widget class="QPushButton" name="pushButton">
+         <property name="styleSheet">
+          <string notr="true">background-color: transparent; color: #333333;font-size: 12px; font-weight: bold; text-align: left;</string>
+         </property>
+         <property name="text">
+          <string>Sobrenome</string>
+         </property>
+         <property name="icon">
+          <iconset>
+           <normaloff>../Assets/id-card.png</normaloff>../Assets/id-card.png</iconset>
+         </property>
+         <property name="iconSize">
+          <size>
+           <width>20</width>
+           <height>20</height>
+          </size>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QLineEdit" name="le_cad_sobrenome">
+         <property name="styleSheet">
+          <string notr="true">background-color: #6C6C6C; color: white; padding: 5px; corner-radius: 10px; font-size: 12px; font-weight: bold; border-radius: 5px;</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <spacer name="verticalSpacer_2">
          <property name="orientation">
           <enum>Qt::Vertical</enum>
          </property>
@@ -166,7 +209,7 @@
         </widget>
        </item>
        <item>
-        <widget class="QLineEdit" name="le_cad_cpf_2">
+        <widget class="QLineEdit" name="le_cad_cpf">
          <property name="minimumSize">
           <size>
            <width>380</width>
@@ -186,55 +229,6 @@
        </item>
        <item>
         <spacer name="verticalSpacer_3">
-         <property name="orientation">
-          <enum>Qt::Vertical</enum>
-         </property>
-         <property name="sizeType">
-          <enum>QSizePolicy::Maximum</enum>
-         </property>
-         <property name="sizeHint" stdset="0">
-          <size>
-           <width>20</width>
-           <height>25</height>
-          </size>
-         </property>
-        </spacer>
-       </item>
-       <item>
-        <widget class="QPushButton" name="pushButton_8">
-         <property name="styleSheet">
-          <string notr="true">background-color: transparent; color: #333333;font-size: 12px; font-weight: bold; text-align: left;</string>
-         </property>
-         <property name="text">
-          <string>   Data de nascimento</string>
-         </property>
-         <property name="icon">
-          <iconset>
-           <normaloff>../Assets/calendar.png</normaloff>../Assets/calendar.png</iconset>
-         </property>
-         <property name="iconSize">
-          <size>
-           <width>20</width>
-           <height>20</height>
-          </size>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <widget class="QDateEdit" name="le_cad_nascimento_2">
-         <property name="minimumSize">
-          <size>
-           <width>380</width>
-           <height>0</height>
-          </size>
-         </property>
-         <property name="styleSheet">
-          <string notr="true">background-color: #6C6C6C; color: white; padding: 5px; corner-radius: 10px; font-size: 12px; font-weight: bold; border-radius: 5px;</string>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <spacer name="verticalSpacer_9">
          <property name="orientation">
           <enum>Qt::Vertical</enum>
          </property>
